--- a/app/src/main/res/layout/activity_detallehuerto.xml
+++ b/app/src/main/res/layout/activity_detallehuerto.xml
@@ -88,70 +88,89 @@
             app:layout_constraintTop_toBottomOf="@id/detallehuertoBoxTitle"
             >
 
-            <Button
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/detallehuertoBtnVariedad"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginVertical="15dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:backgroundTint="@color/green"
-                android:textSize="16dp"
-                android:text="@string/addhuertoBtnVariedad"
-                android:layout_marginBottom="10dp"
-                app:cornerRadius="20dp"
+                android:hint="@string/addhuertoBtnVariedad"
+                app:endIconMode="clear_text"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                />
+                app:layout_constraintBottom_toTopOf="@id/detallehuertoBtnMerObj"
+                >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    />
 
-            <Button
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/detallehuertoBtnMerObj"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginVertical="15dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:backgroundTint="@color/green"
-                android:textSize="16dp"
-                android:text="@string/addhuertoBtnMerObj"
-                android:layout_marginBottom="10dp"
-                app:cornerRadius="20dp"
+                android:hint="@string/addhuertoBtnMerObj"
+                app:endIconMode="clear_text"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/detallehuertoBtnVariedad"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/detallehuertoBtnVariedad"
+                app:layout_constraintBottom_toTopOf="@id/detallehuertoBtnOrganico"
+                >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    />
 
-            <Button
-                android:id="@+id/detallehuertoBtnRiego"
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/detallehuertoBtnOrganico"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginVertical="15dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:backgroundTint="@color/green"
-                android:textSize="16dp"
-                android:text="@string/addhuertoBtnRiego"
-                android:layout_marginBottom="10dp"
-                app:cornerRadius="20dp"
+                android:hint="@string/detallehuertoBtnOrganico"
+                app:endIconMode="clear_text"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/detallehuertoBtnMerObj"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/detallehuertoBtnMerObj"
+                app:layout_constraintBottom_toTopOf="@id/detallehuertoBtnEtapa"
+                >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    />
 
-            <Button
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/detallehuertoBtnEtapa"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginVertical="15dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:backgroundTint="@color/green"
-                android:textSize="16dp"
-                android:text="@string/addhuertoBtnEtapa"
-                android:layout_marginBottom="10dp"
-                app:cornerRadius="20dp"
+                android:hint="@string/addhuertoBtnEtapa"
+                app:endIconMode="clear_text"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/detallehuertoBtnOrganico"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/detallehuertoBtnRiego"
-                />
+                >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
